--- a/OOS/src/app/admin/products/products.component.html
+++ b/OOS/src/app/admin/products/products.component.html
@@ -14,7 +14,7 @@
       <tr>
         <th class="text-center">Image</th>
         <th class="text-center">Product</th>
-        <th class="text-center">Price(.000.VND)</th>
+        <th class="text-center">Price(VND)</th>
         <th class="text-center">Quantity</th>
         <th class="text-center">Status</th>
         <th class="text-right">Action</th>
