update color in order details admin

--- a/OOS/src/app/admin/orders/edit-order/edit-order.component.html
+++ b/OOS/src/app/admin/orders/edit-order/edit-order.component.html
@@ -105,8 +105,13 @@
               <a href="#">{{orderDetail.Code}}</a>
             </td>
             <td class="price text-center">
-              <strong>{{orderDetail.NameProduct}}</strong>
-
+              <h4>{{orderDetail.NameProduct}}</h4>
+              <ul>
+                <li *ngIf="orderDetail.Color">
+                  <span>Color:
+                    <span class="product-color" [style.background]="orderDetail.Color">&nbsp;&nbsp;&nbsp;</span>
+                  </span>
+                </li></ul>
             </td>
             <td class="price text-center">
               <strong>{{orderDetail.Price | number }}</strong>
