sort list order

--- a/OOS/src/app/admin/orders/orders.component.html
+++ b/OOS/src/app/admin/orders/orders.component.html
@@ -39,7 +39,7 @@
     </thead>
     <tbody *ngFor="let order of listOrders; let i = index">
       <tr>
-        <td>{{order.IdBill}}</td>
+        <td>{{order.Id}}</td>
         <td>{{order.Email}}</td>
         <!-- <td>{{order.createdDate| date: 'dd/MM/yyyy'}}</td> -->
         <td>
